@@ -1,0 +1,10 @@
+# Contributing
+
+When contributing to this repository, please first discuss the change you wish to make via issue,
+email, or any other method before making a change. 
+
+## Pull Request Process
+
+1. I prefer to get pull requests rather than patches. Please do pull requests on branches.
+2. Please add an entry for each change in Changes as well.
+3. Increase the version numbers. The versioning scheme is [SemVer](http://semver.org/).
